--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>robomaster_interfaces</name>
+  <name>robomaster_msgs</name>
   <version>0.1.0</version>
   <description>TODO: Package description</description>
   <maintainer email="jb2270@cam.ac.uk">jan</maintainer>
